--- a/app/src/main/res/layout/summaryclass.xml
+++ b/app/src/main/res/layout/summaryclass.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/edback"
-    android:layout_margin="15dp">
+    android:background="@drawable/backsummary"
+    >
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="10dp"
+        android:layout_marginLeft="25dp"
+
+    android:layout_marginTop="70dp"
     android:weightSum="9">
 
     <LinearLayout
@@ -24,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginLeft="30dp"
                 android:text="Total Ticket"
                 android:textColor="#000"
                 android:textSize="20dp" />
@@ -46,6 +49,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
                 android:text="Total Amount"
                 android:layout_weight="1"
                 android:textColor="#000"
@@ -67,10 +71,13 @@
         android:weightSum="2">
     <Button
         android:id="@+id/bPrintSummaryp"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
+        android:background="@drawable/selector_xml_btn_yellow"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="85dp"
+        android:textColor="#FFF"
+        android:layout_marginLeft="95dp"
+
         android:text="Print Summary" />
         </LinearLayout>
 </LinearLayout>
