--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"    android:background="@color/pageback"
+
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,32 +19,33 @@
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/account"
+            android:imeOptions="actionNext"
             android:drawablePadding="5dp"
             android:background="@color/edback"
             android:ems="10"
-            android:text="doctorhospital@lepark.com"
+            android:hint="Email"
+            android:text="jeffheights@lepark.com"
             android:inputType="textEmailAddress"
-            android:paddingLeft="0dp"
+            android:paddingLeft="8dp"
             android:textColor="@color/textcolor"
-            android:textColorHint="#fffefe" />
+            android:textColorHint="@color/textcolor" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="10dp"
-            android:drawableLeft="@drawable/lock"
+            android:hint="Password"
             android:drawablePadding="5dp"
             android:ems="10"
-            android:background="@color/edback"
             android:text="lepark1234"
+            android:background="@color/edback"
             android:inputType="textPassword"
-            android:paddingLeft="0dp"
+            android:paddingLeft="8dp"
             android:textColor="@color/textcolor"
-            android:textColorHint="#ffffff" />
+            android:textColorHint="@color/textcolor" />
 
         <Button
             android:id="@+id/btLogin"
@@ -48,18 +53,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
+            android:imeOptions="actionGo"
             android:background="@drawable/selector_xml_btn_yellow"
             android:text="Sign In"
-            android:textColor="@color/textcolor"/>
+            android:textColor="#FFF" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-
-            android:text="Forgot password?"
+            android:layout_marginTop="15dp"
+            android:text="Not a number?"
+            android:textSize="13dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#48578b" />
         <TextView
@@ -67,15 +73,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-
-            android:text="Sign up?"
+            android:textSize="13dp"
+            android:text="Sign up now.?"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#2c2fd4" />
-        <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progress"
-            android:layout_gravity="center_vertical|center_horizontal" />
+
     </LinearLayout>
 </LinearLayout>
+    </ScrollView>
