--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/mainToolColor"
+        android:background="#162a49"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="LePark" />
 
