--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,83 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+   >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#f7f7f7"
+    android:orientation="vertical"
     android:padding="10dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="50dp">
+        android:padding="40dp">
 
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/account"
+            android:layout_height="40dp"
+            android:background="@color/edback"
             android:drawablePadding="5dp"
             android:ems="10"
-            android:background="@color/edback"
+            android:imeOptions="actionNext"
             android:hint="Username"
             android:inputType="textEmailAddress"
-            android:paddingLeft="0dp"
-            android:textColor="#000"
+            android:paddingLeft="8dp"
             android:textColorHint="@color/textcolor" />
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/account"
-            android:drawablePadding="5dp"
+            android:layout_height="40dp"
             android:layout_marginTop="5dp"
-            android:ems="10"
             android:background="@color/edback"
+            android:imeOptions="actionNext"
+            android:drawablePadding="5dp"
+            android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:paddingLeft="0dp"
-            android:textColor="#FFF"
-            android:textColorHint="#fffefe" />
+            android:paddingLeft="8dp"
+            android:textColorHint="@color/textcolor" />
+
         <EditText
-        android:id="@+id/edpassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+            android:id="@+id/edpassword"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginTop="5dp"
-        android:drawableLeft="@drawable/lock"
-        android:drawablePadding="5dp"
             android:background="@color/edback"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:paddingLeft="0dp"
-        android:textColor="#FFF"
-        android:textColorHint="#ffffff" />
+            android:drawablePadding="5dp"
+            android:ems="10"
+            android:imeOptions="actionNext"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingLeft="8dp"
+            android:textColor="#FFF"
+            android:textColorHint="@color/textcolor" />
+
         <EditText
             android:id="@+id/edconfirm"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/lock"
-            android:drawablePadding="5dp"
+            android:layout_height="40dp"
             android:layout_marginTop="5dp"
-            android:ems="10"
             android:background="@color/edback"
+            android:drawablePadding="5dp"
+            android:imeOptions="actionNext"
+            android:ems="10"
             android:hint="Confirm Pass"
             android:inputType="textPassword"
-            android:paddingLeft="0dp"
+            android:paddingLeft="8dp"
             android:textColor="#FFF"
-            android:textColorHint="#ffffff" />
+            android:textColorHint="@color/textcolor" />
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Privacy Policy"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:textColor="#2c2fd4"
+            />
+
         <Button
             android:id="@+id/btsignup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
+            android:imeOptions="actionGo"
+            android:layout_marginTop="20dp"
             android:background="@drawable/selector_xml_btn_yellow"
             android:onClick="checkLogin"
-            android:textColor="#FFF"
-            android:text="Sign Up" />
+            android:text="Sign Up"
+            android:textColor="#FFF" />
+
 
     </LinearLayout>
 </LinearLayout>
 
+</ScrollView>
