--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#844f61</color>
     <color name="black">#000</color>
-    <color name="orange">#f9f7f7</color>
+    <color name="orange">#6b73b4</color>
     <color name="white">#FFF</color>
-    <color name="gery">#e7e4e4</color>
+    <color name="gery">#dcd6d6</color>
     <color name="textcolor">#737171</color>
     <color name="edback">#d7dbdc</color>
     <color name="pageback">#FFF</color>
