--- a/app/src/main/res/layout/item_tickets.xml
+++ b/app/src/main/res/layout/item_tickets.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_books"
+    android:id="@+id/card_ticket"
     style="@style/AppTheme.Card.Margins"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
         android:background="#4567"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="125dp"
+        android:padding="2dp"
         android:orientation="vertical"
-        android:weightSum="6">
+        android:weightSum="8">
 
         <TextView
-            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:text="Site Name"
+            android:layout_weight="1"/>
+
+        <TextView
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Vehicle Type"
             android:layout_weight="1"/>
 
         <TextView
@@ -52,25 +59,37 @@
             android:layout_height="wrap_content"
             android:text="Location"
             android:layout_weight="1"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sync Status"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="125dp"
         android:layout_marginLeft="100dp"
         android:orientation="vertical"
-        android:weightSum="5">
+        android:padding="2dp"
+        android:weightSum="8">
 
         <TextView
-            android:id="@+id/agnetName"
+            android:id="@+id/tvSiteName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/tvVehicleType"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:layout_weight="1"/>
 
         <TextView
-            android:id="@+id/timeIn"
+            android:id="@+id/tvTimeIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -96,8 +115,16 @@
             android:layout_height="wrap_content"
 
             android:layout_weight="1"/>
+
         <TextView
             android:id="@+id/Dlocation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/tvSyncStatus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
