lepak 19..........Layout settings

--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -71,7 +71,7 @@
                     android:id="@+id/tvSiteName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="48dp"
+                    android:gravity="right"
                     android:layout_weight="1"
                     android:text="" />
 
@@ -99,6 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="right"
                     android:text="" />
 
 
@@ -124,8 +125,9 @@
                     android:id="@+id/Dnumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="22dp"
+
                     android:layout_weight="1"
+                    android:gravity="right"
                     android:text="" />
 
 
@@ -152,6 +154,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="right"
                     android:text="" />
 
 
@@ -177,8 +180,9 @@
                     android:id="@+id/Dlocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="22dp"
+
                     android:layout_weight="1"
+                    android:gravity="right"
                     android:text="" />
 
             </LinearLayout>
