--- a/app/src/main/res/layout/item_tickets.xml
+++ b/app/src/main/res/layout/item_tickets.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:background="#4567"
         android:layout_width="100dp"
-        android:layout_height="125dp"
+        android:layout_height="145dp"
         android:padding="2dp"
         android:orientation="vertical"
         android:weightSum="8">
@@ -69,7 +69,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="145dp"
         android:layout_marginLeft="100dp"
         android:orientation="vertical"
         android:padding="2dp"
@@ -79,55 +79,71 @@
             android:id="@+id/tvSiteName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
             android:layout_weight="1"/>
         <TextView
             android:id="@+id/tvVehicleType"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
             android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/tvTimeIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
             android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/timeOut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
             android:layout_weight="1" />
 
         <TextView
             android:id="@+id/Dnumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
             android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/Dprice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
             android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/Dlocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
             android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/tvSyncStatus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
             android:layout_weight="1"/>
     </LinearLayout>
 
