lepak 19..........Printer Correct , Validations , Agaianst number check

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,71 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#0079"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="match_parent"
 
-        android:padding="10dp">
+        android:background="@color/pageback">
 
-        <EditText
-            android:id="@+id/enterNum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:textColorHint="#FFC9CACA"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#0079"
             android:gravity="center"
-            android:hint="@string/enter_number"
-            android:inputType="textPersonName" />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:padding="10dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="10dp">
 
-        <Button
-            android:id="@+id/carButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="@drawable/selector_xml_btn_yellow"
-            android:text="Print Car" />
+                <EditText
+                    android:id="@+id/enterNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:hint="@string/enter_number"
+                    android:inputType="textPersonName"
+                    android:textColorHint="#FFC9CACA" />
+            </LinearLayout>
 
-        <Button
-            android:id="@+id/bikeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="@drawable/selector_xml_btn_yellow"
-            android:text="Print bike"
-        />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
-    </LinearLayout>
+                <Button
+                    android:id="@+id/bCar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/selector_xml_btn_yellow"
+                    android:text="Print Car" />
 
-    <!--<Button-->
-        <!--android:id="@+id/btAllTickets"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@drawable/selector_xml_btn_yellow"-->
-        <!--android:text="@string/show_all" />-->
+                <Button
+                    android:id="@+id/bBike"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/selector_xml_btn_yellow"
+                    android:text="Print bike" />
 
-    <!--<Button-->
-        <!--android:id="@+id/exit"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_margin="21dp"-->
-        <!--android:background="@drawable/selector_xml_btn_yellow"-->
-        <!--android:text="Exit" />-->
-</LinearLayout>
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
+                <Button
+                    android:id="@+id/bTruck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/selector_xml_btn_yellow"
+                    android:text="Print Truck" />
+
+                <Button
+                    android:id="@+id/bVan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/selector_xml_btn_yellow"
+                    android:text="Print Van" />
+
+            </LinearLayout>
+
+            <!--<Button-->
+            <!--android:id="@+id/btAllTickets"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/selector_xml_btn_yellow"-->
+            <!--android:text="@string/show_all" />-->
+
+            <!--<Button-->
+            <!--android:id="@+id/exit"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="21dp"-->
+            <!--android:background="@drawable/selector_xml_btn_yellow"-->
+            <!--android:text="Exit" />-->
+        </LinearLayout>
+
+    </ScrollView>
+</RelativeLayout>
