--- a/app/src/main/res/layout/tab_layout.xml
+++ b/app/src/main/res/layout/tab_layout.xml
@@ -10,8 +10,9 @@
         android:id="@+id/tabs"
         app:tabGravity="fill"
         app:tabMode="fixed"
+
         android:background="#2a4876"
-        app:tabIndicatorColor="@color/orange"
+        app:tabIndicatorColor="#df99a0"
        app:tabIndicatorHeight="7dp"
         app:tabSelectedTextColor="@color/white"
         app:tabTextColor="@color/gery"
