--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.codextech.ibtisam.lepak_app.activity.TicketFormatActivity">
-
+    android:fitsSystemWindows="true"
+  >
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#162a49"
+        android:background="@color/black"
+        android:id="@+id/toolbar"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:title="LePark" />
+        app:title="LePak Parking Application" />
 
 
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/drawerLayout"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/drawerLayout"
+        >
+
 
 
         <FrameLayout
-            android:id="@+id/containerView"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"></FrameLayout>
+            android:id="@+id/containerView">
+        </FrameLayout>
 
 
-        <android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
+
+        <android.support.design.widget.NavigationView
+            xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/shitstuff"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            app:headerLayout="@layout/navigation_header"
+            android:id="@+id/shitstuff"
             app:itemTextColor="@color/black"
-            app:menu="@menu/drawermenu" />
+            app:menu="@menu/drawermenu"
+            app:headerLayout="@layout/navigation_header"
+            />
+
 
 
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
+
