--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,75 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-   >
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f7f7f7"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#f7f7f7"
         android:orientation="vertical"
-        android:padding="40dp">
+        android:padding="10dp">
 
-        <EditText
-            android:id="@+id/edSiteName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/edback"
-            android:drawablePadding="5dp"
-            android:ems="10"
-            android:imeOptions="actionNext"
-            android:hint="Site Name"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="8dp"
-            android:textColorHint="@color/textcolor" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="40dp">
+
+            <EditText
+                android:id="@+id/edSiteName"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@color/edback"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:hint="Site Name"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="8dp"
+                android:textColorHint="@color/textcolor" />
 
 
+            <Spinner
+                android:id="@+id/spLocation"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
 
-        <Spinner
-            android:id="@+id/spLocation"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
+                android:textColor="@color/textcolor" />
+            >
 
-            android:textColor="@color/textcolor"/>
-        >
-        <Spinner
-            android:id="@+id/spCityId"
-            android:layout_width="match_parent"
-            android:layout_height="39dp"
-            android:layout_marginTop="20dp"
+            <Spinner
+                android:id="@+id/spCityId"
+                android:layout_width="match_parent"
+                android:layout_height="39dp"
+                android:layout_marginTop="20dp"
 
-            android:textColor="@color/textcolor"/>
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Privacy Policy"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:textColor="#2c2fd4"
-            />
+                android:textColor="@color/textcolor" />
+            >
 
-        <Button
-            android:id="@+id/btsignup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:imeOptions="actionGo"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/selector_xml_btn_yellow"
-            android:onClick="checkLogin"
-            android:text="Sign Up"
-            android:textColor="#FFF" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Please Set Your Sites Id Rates"
+        android:layout_gravity="center"
+        android:gravity="center"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Car"
+                    android:id="@+id/etCarAmount"
+                    android:gravity="center"
+                    android:layout_weight="1"/>
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/etBikeAmount"
+                    android:gravity="center"
+                    android:hint="Bike" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/etVanAmount"
+                    android:gravity="center"
+                    android:hint="Van" />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:id="@+id/etTruckAmount"
+                    android:hint="Truck" />
+
+            </LinearLayout>
 
 
+            <Button
+                android:id="@+id/btsignup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/selector_xml_btn_yellow"
+                android:imeOptions="actionGo"
+                android:onClick="checkLogin"
+                android:text="Sign Up"
+                android:textColor="#FFF" />
+
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 
 </ScrollView>
