--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -15,7 +15,7 @@
             android:background="#e8e9cf"
             android:orientation="vertical"
             android:padding="18dp"
-            android:weightSum="7">
+            android:weightSum="8">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -125,7 +125,32 @@
                     android:id="@+id/Dnumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="" />
 
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Veh Type" />
+
+                <TextView
+                    android:id="@+id/tvVehicleType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
                     android:text="" />
@@ -213,12 +238,11 @@
         android:id="@+id/btnPrintMix"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:textColor="@color/white"
         android:background="@drawable/selector_xml_btn_yellow"
+        android:text="Print Ticket"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="Print Ticket" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
