--- a/app/src/main/res/layout/summaryclass.xml
+++ b/app/src/main/res/layout/summaryclass.xml
@@ -3,94 +3,104 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backsummary"
-    >
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:contentScrim="?attr/colorPrimary"
-        app:layout_scrollFlags="enterAlways" />
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-        android:layout_marginLeft="25dp"
-
-    android:layout_marginTop="70dp"
-    android:weightSum="9">
-
-    <LinearLayout
+>
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1"
-        android:weightSum="2">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="enterAlways" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="70dp"
+
+        android:orientation="vertical"
+        android:weightSum="9">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <TextView
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginLeft="70dp"
                 android:layout_gravity="center"
+                android:layout_marginLeft="70dp"
+                android:layout_weight="1"
                 android:text="Total Ticket"
                 android:textColor="#000"
                 android:textSize="14dp" />
-        <TextView
-            android:id="@+id/tvTicketCount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1"
 
-           />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1"
-        android:weightSum="2">
             <TextView
-
+                android:id="@+id/tvTicketCount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="70dp"
-                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
 
-                android:text="Total Amount"
-                android:layout_weight="1"
-                android:textColor="#000"
-                android:textSize="14dp" />
-  =
-            <TextView
-                android:id="@+id/tvTicketTotal"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="39dp"
                 />
         </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1"
-        android:weightSum="2">
-
-        <Button
-            android:id="@+id/bPrintSummaryp"
-            android:layout_width="130dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="75dp"
-            android:background="@drawable/selector_xml_btn_yellow"
-            android:text="Print Summary"
-            android:textColor="#FFF"
-            android:textSize="14dp" />
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="70dp"
+
+                android:layout_weight="1"
+                android:text="Total Amount"
+                android:textColor="#000"
+                android:textSize="14dp" />
+            =
+
+            <TextView
+                android:id="@+id/tvTicketTotal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="39dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <Button
+                android:id="@+id/bPrintSummaryp"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="75dp"
+                android:background="@drawable/selector_xml_btn_yellow"
+                android:text="Print Summary"
+                android:textColor="#FFF"
+                android:textSize="14dp" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 </RelativeLayout>
