--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -21,6 +21,10 @@
             <item
                 android:id="@+id/nav_refresh"
                 android:title="Refresh" />
+
+            <item
+                android:id="@+id/nav_NfcActvity"
+                android:title="NFC Detection" />
         </group>
 
             <item
